--- a/frontend/src/Components/Header/Header.css
+++ b/frontend/src/Components/Header/Header.css
@@ -1,4 +1,28 @@
 .header{
     height: 60px;
-    background-color: red;
+    border-bottom:1px solid #ccc ;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 10px;
+}
+.header-infos{
+    display: flex;
+    align-items: center;
+    gap: 20px;
+    text-align: center;
+    padding:0px 10px;
+}
+.header-cover{
+    width: 60px;
+    height: 60px;
+    border-radius: 50%;
+    object-fit: cover;
+}
+.admin-name{
+    font-weight: bold;
+    font-size: 22px;
+}
+.admin-job{
+color: gray;
 }
