--- a/frontend/src/cms.css
+++ b/frontend/src/cms.css
@@ -1,3 +1,24 @@
+.modal-parent{
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%,-50%);
+    z-index: 2;
+    width: 100%;
+    height: 100vh;
+    background-color: rgba(0, 0, 0, 0.5);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    opacity: 0;
+    visibility: hidden;
+    transition: 200ms;
+    overflow-y: scroll;
+}
+.active{
+    opacity: 1;
+    visibility: visible;
+}
 .cms-table{
     margin-top: 10px;
     background-color: var(--white);
