--- a/frontend/src/Components/Header/Header.css
+++ b/frontend/src/Components/Header/Header.css
@@ -4,7 +4,7 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
-    background-color: var(--white-50);
+    /* background-color: var(--white-50); */
     /* padding: 10px; */
 }
 .header-infos{
