--- a/frontend/src/cms.css
+++ b/frontend/src/cms.css
@@ -21,10 +21,11 @@
 }
 .cms-table{
     margin-top: 10px;
-    background-color: var(--white);
+    /* background-color: var(--white); */
     border-radius: 20px;
     /* width: 100%; */
 }
+
 .cms-table tr{
     text-align: center;
 }
